--- a/Paint_Design/PickColor.xaml
+++ b/Paint_Design/PickColor.xaml
@@ -4,8 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       Name="pickcl"
-	Title="Edit Color" Width="330" Height="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="setColor.jpg">
-
+	Title="Edit Color" Width="330" Height="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="icon\setColor.jpg">
     <Grid Background="Bisque" Width="324" Height="272">
         <Slider Name="A_Slider" HorizontalAlignment="Left" Height="27" Margin="50,95,0,0" VerticalAlignment="Top" Width="210" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
         <Slider Name="R_Slider" HorizontalAlignment="Left" Height="27" Margin="50,129,0,0" VerticalAlignment="Top" Width="210" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
@@ -19,7 +18,7 @@
         <Label Content="R" HorizontalAlignment="Left" Height="27" Margin="10,129,0,0" VerticalAlignment="Top" Width="25"/>
         <Label Content="G" HorizontalAlignment="Left" Height="27" Margin="10,163,0,0" VerticalAlignment="Top" Width="25"/>
         <Label Content="B" HorizontalAlignment="Left" Height="27" Margin="10,195,0,0" VerticalAlignment="Top" Width="25"/>
-        <Label Name="A_Value" Content="0 %" HorizontalAlignment="Left" Height="27" Margin="276,95,0,0" VerticalAlignment="Top" Width="37"/>
+        <Label Name="A_Value" Content="0 %" HorizontalAlignment="Left" Height="27" Margin="276,95,5,0" VerticalAlignment="Top" Width="37"/>
         <Label Name="R_Value" Content="0" HorizontalAlignment="Left" Height="27" Margin="276,129,0,0" VerticalAlignment="Top" Width="37"/>
         <Label Name="G_Value" Content="0" HorizontalAlignment="Left" Height="27" Margin="276,163,0,0" VerticalAlignment="Top" Width="37"/>
         <Label Name="B_Value" Content="0" HorizontalAlignment="Left" Height="27" Margin="276,195,0,0" VerticalAlignment="Top" Width="37"/>
